# SVDemo-MockingBird

./: .gitignore  BUGS.md  CLAUDE.md  PHASES.md  README.md  START_HERE.md  SV_Platform_Master_Guide.md  setup.ps1  setup.sh  start-dev.ps1  start-dev.sh
Sample_SV_Files/ESP/: 1781082059482RTCAERv01_Request_20260610_100059.txt  1781082059500RTCAERv01_Success1Response_20260610_100059.txt  1781082551676RTCAERv01_Error400Response_20260610_100911.txt  1781082552845RTCAERv01_Request_20260610_100912.txt  combined_request_response.txt
Sample_SV_Files/Wealth/: CreateAdviserPOST_Request.txt  CreateAdviserPost_Response.txt  GetAdvisersByID_Response.txt  GetAdvisers_Request.txt
config/: example.env
docs/: ARCHITECTURE.md  DECISIONS_LOG.md  DEPLOYMENT_ARCHITECTURE.md  DOCUMENTATION_STANDARDS.md  FINAL_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LOCAL_DEVELOPMENT.md  SV_EXPERT_REVIEW.md  TECH_STACK.md  USER_FLOWS.md  USER_GUIDE.md
docs/input-formats/: GUIDE.md
portal/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  playwright.screenshots.config.ts  tailwind.config.ts  tsconfig.node.json  vite.config.ts
scripts/: run-real-tests.ps1  scaffold-project.ps1  seed-users.ps1  start-services.ps1  stop-services.ps1
services/: docker-compose.yml
services/deployer-worker/: Dockerfile  pyproject.toml
services/deployer-worker/src/deployer_worker/: __main__.py  config.py  gitlab_client.py  health.py  microcks.py  terraform.py  worker.py
services/deployer-worker/tests/: test_microcks_deployer.py  test_worker.py
services/generator-worker/: Dockerfile  pyproject.toml
services/generator-worker/src/generator_worker/: worker.py
services/generator-worker/tests/: test_worker.py
services/ingestion-service/: Dockerfile  pyproject.toml  requirements.txt
services/ingestion-service/src/ingestion_service/: config.py  database.py  dependencies.py  main.py  models.py  s3_client.py  schemas.py  wiremock_generator.py
services/ingestion-service/src/ingestion_service/routers/: upload.py
services/ingestion-service/tests/: conftest.py  test_upload.py
services/metrics-service/: Dockerfile  pyproject.toml
services/metrics-service/src/metrics_service/: __main__.py  config.py  main.py  models.py  redis_pub.py  scraper.py  timestream.py
services/metrics-service/src/metrics_service/routers/: metrics.py  ws.py
services/metrics-service/tests/: test_metrics.py
services/parser-worker/: pyproject.toml  requirements.txt
services/parser-worker/src/parser_worker/: __init__.py  cli.py  detector.py  models.py  models_asyncapi.py  models_kafka.py  models_mq.py  worker.py
services/parser-worker/src/parser_worker/generator/: __init__.py  kafka_springboot.py  microcks.py  mq_springboot.py  springboot.py  wiremock.py
services/parser-worker/src/parser_worker/parsers/: __init__.py  asyncapi.py  base.py  ca_lisa_parser.py  json_level3.py  kafka_json.py  mq_json.py  openapi.py  postman.py  soap_txt.py  stateful_txt.py  txt_level1.py  txt_level2.py
services/parser-worker/src/parser_worker/templates/stub-engine/: docker-compose.yml  pom.xml  settings.xml
services/parser-worker/src/parser_worker/templates/stub-engine-kafka/: Dockerfile  pom.xml
services/parser-worker/src/parser_worker/templates/stub-engine-kafka/src/main/java/com/mockingbird/stubs/kafka/: KafkaStubApplication.java  KafkaStubConsumer.java  StubController.java  StubDefinition.java  StubRegistry.java
services/parser-worker/src/parser_worker/templates/stub-engine-kafka/src/main/resources/: application.yml  stubs.json
services/parser-worker/src/parser_worker/templates/stub-engine-mq/: pom.xml
services/parser-worker/src/parser_worker/templates/stub-engine-mq/src/main/java/com/mockingbird/stubs/mq/: MQStubApplication.java  MQStubConsumer.java  StubController.java  StubDefinition.java  StubRegistry.java
services/parser-worker/src/parser_worker/templates/stub-engine-mq/src/main/resources/: application.yml  stubs.json
services/parser-worker/src/parser_worker/templates/stub-engine/src/main/java/com/mockingbird/stubs/: StubApplication.java  WireMockConfig.java  WsSecurityConfig.java  WsdlConfig.java
services/parser-worker/src/parser_worker/templates/stub-engine/src/main/java/com/natwest/mockingbird/stubs/: StubApplication.java  WireMockConfig.java  WsSecurityConfig.java  WsdlConfig.java
services/parser-worker/src/parser_worker/templates/stub-engine/src/main/resources/: application.yml
services/parser-worker/src/parser_worker/templates/stub-engine/src/main/resources/wsdl/: service.wsdl
services/parser-worker/tests/: test_asyncapi_parser.py  test_ca_lisa_parser.py  test_dynamic_responses.py  test_fault_injection.py  test_integration.py  test_kafka_generator.py  test_kafka_parser.py  test_microcks_generator.py  test_mq_generator.py  test_mq_parser.py  test_openapi_parser.py  test_postman_parser.py  test_soap_advanced.py  test_soap_parser.py  test_stateful_scenarios.py  test_txt_level1.py  test_txt_level2.py  test_wiremock_generator.py  test_worker.py
services/project-service/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/project-service/alembic/: env.py
services/project-service/alembic/versions/: 001_initial_schema.py  002_expand_deployments.py  003_add_stub_status.py
services/project-service/src/project_service/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  sqs_client.py
services/project-service/src/project_service/routers/: admin.py  deploy.py  jobs.py  projects.py  stubs.py
services/project-service/tests/: conftest.py  test_deploy.py  test_jobs.py  test_projects.py  test_sprint19.py  test_sprint20.py  test_stubs.py
services/reporter-service/: Dockerfile  pyproject.toml
services/reporter-service/src/reporter_service/: __main__.py  config.py  data_loader.py  models.py  s3_store.py  worker.py
services/reporter-service/src/reporter_service/renderers/: excel.py  pdf.py  ppt.py
services/reporter-service/tests/: test_reporter.py
stub-engine/: .gitlab-ci.yml  Dockerfile  pom.xml  settings.xml
(+123 files in other folders)
