[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockingbird-generator-worker"
version = "0.1.0"
description = "Mockingbird generate-queue SQS consumer — generates Spring Boot stub projects"
requires-python = ">=3.11"
dependencies = [
    "mockingbird-parser-worker",
    "boto3>=1.34.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "moto[s3,sqs]>=5.0.0,<6.0.0",
]

[project.scripts]
sv-generate-worker = "generator_worker.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/generator_worker --cov-report=term-missing"

[tool.coverage.run]
source = ["src/generator_worker"]
