[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockingbird-ingestion-service"
version = "0.1.0"
description = "Mockingbird file ingestion service — upload, detect, validate, store to S3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<0.120.0",
    "uvicorn[standard]>=0.29.0,<0.31.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "boto3>=1.34.0,<2.0.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-multipart>=0.0.9,<1.0.0",
    # parser-worker is installed separately: pip install -e ../parser-worker
    "mockingbird-parser-worker",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27.0",
    "moto[s3]>=5.0.0,<6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ingestion_service --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ingestion_service"]
