[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockingbird-parser-worker"
version = "0.1.0"
description = "Mockingbird input parser and WireMock stub generator"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "click>=8.1,<9.0",
    "jinja2>=3.1,<4.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
worker = [
    "boto3>=1.34.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "boto3>=1.34.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "moto[s3,sqs]>=5.0.0,<6.0.0",
]

[project.scripts]
sv-gen = "parser_worker.cli:main"
sv-parse-worker = "parser_worker.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"parser_worker" = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/parser_worker --cov-report=term-missing"

[tool.coverage.run]
source = ["src/parser_worker"]
