[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockingbird-project-service"
version = "0.1.0"
description = "Mockingbird project and stub management service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<0.120.0",
    "uvicorn[standard]>=0.29.0,<0.31.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/project_service --cov-report=term-missing"

[tool.coverage.run]
source = ["src/project_service"]
