[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockingbird-reporter-service"
version = "0.1.0"
description = "Mockingbird reporter-worker — SQS REPORT consumer: PDF + Excel + PowerPoint"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=62.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "moto[s3,sqs]>=5.0",
]

[project.scripts]
sv-report-worker = "reporter_service.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=reporter_service --cov-report=term-missing"
